Add FDP Search to Query Search dropdown and sidebar

--- a/templates/home.html
+++ b/templates/home.html
@@ -24,6 +24,7 @@
             <li><a class="dropdown-item dropdown-item-custom" data-search="InternVideo2 Search" href="#"><i class="fa-solid fa-video"></i> InternVideo2 Search</a></li>
             <li><a class="dropdown-item dropdown-item-custom" data-search="blip2 Search" href="#"><i class="fa-solid fa-robot"></i> blip2 Search</a></li>
             <li><a class="dropdown-item dropdown-item-custom" data-search="bge-m3 Search" href="#"><i class="fa-solid fa-brain"></i> bge-m3 Search</a></li>
+            <li><a class="dropdown-item dropdown-item-custom" data-search="FDP Search" href="#"><i class="fa-solid fa-database"></i> FDP Search</a></li>
             <li><a class="dropdown-item dropdown-item-custom" data-search="OCR Match" href="#"><i class="fa-regular fa-star"></i> OCR Match</a></li>
             <li><hr class="dropdown-divider" /></li>
           <li><div class="dropdown-section-title">Text Search</div></li>
