--- a/templates/_search_results.html
+++ b/templates/_search_results.html
@@ -1,11 +1,21 @@
-<div class="row row-cols-5 g-3">
-  {% for result in results %}
-  <div class="col">
-    <div class="img-card" style="border-color: {{ result.border_color }};">
-      <img src="{{ result.image_url }}" alt="Frame" />
-      <div class="img-label" style="--img-label-color: {{ result.border_color }};">{{ result.video_id }}</div>
-      <div class="img-number">{{ result.frame_num }}</div>
+<div class="container-fluid">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-5 g-3">
+    {% for result in results %}
+    <div class="col">
+      <div class="img-card" style="--card-border-color: {{ result.border_color }};">
+        <div class="img-wrapper">
+          <img src="{{ result.image_url }}" alt="Frame" />
+          <!-- Q icon overlay -->
+          <span class="img-q-icon">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </span>
+        </div>
+        <div class="img-info-row">
+          <span class="img-label" style="--img-label-color: {{ result.border_color }};">{{ result.video_id }}</span>
+          <span class="img-number">{{ result.frame_num }}</span>
+        </div>
+      </div>
     </div>
+    {% endfor %}
   </div>
-  {% endfor %}
-</div> 
+</div>
