--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,9 @@
             <li><div class="dropdown-section-title">Query Search</div></li>
             <li><a class="dropdown-item dropdown-item-custom" data-search="InternVideo2 Search" href="#"><i class="fa-solid fa-video"></i> InternVideo2 Search</a></li>
             <li><a class="dropdown-item dropdown-item-custom" data-search="blip2 Search" href="#"><i class="fa-solid fa-robot"></i> blip2 Search</a></li>
+            <li><a class="dropdown-item dropdown-item-custom" data-search="SigLIP2 Search" href="#"><i class="fa-solid fa-image"></i> SigLIP2 Search</a></li>
             <li><a class="dropdown-item dropdown-item-custom" data-search="bge-m3 Search" href="#"><i class="fa-solid fa-brain"></i> bge-m3 Search</a></li>
+            <li><a class="dropdown-item dropdown-item-custom" data-search="PE Search" href="#"><i class="fa-solid fa-microchip"></i> PE Search</a></li>
             <li><a class="dropdown-item dropdown-item-custom" data-search="FDP Search" href="#"><i class="fa-solid fa-database"></i> FDP Search</a></li>
             <li><a class="dropdown-item dropdown-item-custom" data-search="OCR Match" href="#"><i class="fa-regular fa-star"></i> OCR Match</a></li>
             <li><hr class="dropdown-divider" /></li>
