--- a/templates/_search_results.html
+++ b/templates/_search_results.html
@@ -4,7 +4,8 @@
     <div class="col">
       <div
         class="img-card clickable"
-        data-img-id="{{ result.video_id }}_{{ result.frame_num }}"
+        data-video-id="{{ result.video_id }}"
+        data-frame="{{ result.frame_num }}"
         style="--card-border-color: {{ result.border_color }};"
       >
         <div class="img-wrapper">
