--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,9 @@
             <li><div class="dropdown-section-title">Query Search</div></li>
             <li><a class="dropdown-item dropdown-item-custom" data-search="InternVideo2 Search" href="#"><i class="fa-solid fa-video"></i> InternVideo2 Search</a></li>
             <li><a class="dropdown-item dropdown-item-custom" data-search="blip2 Search" href="#"><i class="fa-solid fa-robot"></i> blip2 Search</a></li>
+            <li><a class="dropdown-item dropdown-item-custom" data-search="SigLIP2 Search" href="#"><i class="fa-solid fa-image"></i> SigLIP2 Search</a></li>
             <li><a class="dropdown-item dropdown-item-custom" data-search="bge-m3 Search" href="#"><i class="fa-solid fa-brain"></i> bge-m3 Search</a></li>
+            <li><a class="dropdown-item dropdown-item-custom" data-search="PE Search" href="#"><i class="fa-solid fa-microchip"></i> PE Search</a></li>
             <li><a class="dropdown-item dropdown-item-custom" data-search="FDP Search" href="#"><i class="fa-solid fa-database"></i> FDP Search</a></li>
             <li><a class="dropdown-item dropdown-item-custom" data-search="OCR Match" href="#"><i class="fa-regular fa-star"></i> OCR Match</a></li>
             <li><hr class="dropdown-divider" /></li>
@@ -62,7 +64,33 @@
       <div id="tabContent" class="tab-content border border-top-0 bg-white rounded-bottom p-3"></div>
     </div>
   </main>
-
+    <!-- Modal for frame slider -->
+  <div class="modal fade" id="frameSliderModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Frame Viewer</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div id="frameCarousel" class="carousel slide" data-bs-ride="false" data-bs-interval="false">
+            <div class="carousel-inner" id="carouselInner"></div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#frameCarousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#frameCarousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <div class="mt-3">
+            <p id="frameInfo"></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="{{ url_for('static', filename='js/search-ui.js') }}"></script>
